# DesktopWarfare

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
DesktopWarfare/: CMakeLists.txt  DesktopWarfare.cpp  GameEngine.cpp  GameEngine.h
DesktopWarfare/Entities/: Entity.h  EntityManager.cpp  EntityManager.h
DesktopWarfare/GameSystems/: GSInput.cpp  GSInput.h  GSProgramOptions.cpp  GSProgramOptions.h  GSSettings.cpp  GSSettings.h  GSWindow.cpp  GSWindow.h
DesktopWarfare/Scenes/: MenuScene.cpp  MenuScene.h  Scene.cpp  Scene.h
DesktopWarfare/Systems/: GameSystem.cpp  GameSystem.h  InputSystem.cpp  InputSystem.h  ProgramOptionsSystem.cpp  ProgramOptionsSystem.h  SettingsSystem.cpp  SettingsSystem.h  SystemBase.h  SystemManager.h  WindowSystem.cpp  WindowSystem.h
DesktopWarfare/Utilities/: Logger.cpp  Logger.h
cmake/: BuildInfo.cmake  buildinfo.h.in
